<resources>

    <!-- navBar -->
    <string name="app_name">SimCareer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- navigation MENU -->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Galleria</string>
    <string name="menu_settings">Impostazioni</string>
    <string name="menu_leaderboard">Classifica</string>
    <string name="menu_profile">Profilo</string>
    <string name="menu_subscription">Iscrizioni</string>

    <!-- LOGIN -->
    <string name="login_welcome">Benvenuto su SimCareer!</string>
    <string name="username">Nome utente</string>
    <string name="password">Password</string>
    <string name="ricordami">Ricordami</string>
    <string name="login_enter">Entra</string>
    <string name="login_or">Oppure</string>
    <string name="login_register">Iscriviti</string>
    <string name="app_logo">app logo</string>
    <string name="app_bar_username">Username</string>
    <string name="app_bar_team_name">Team Name</string>
    <string name="cup_name">Cup name</string>
    <string name="active_cup">Campionati Attivi</string>
    <string name="past_cup">Campionati Passati</string>
    <string name="home_leaderboard">Classifica</string>
    <string name="menu_cup">Campionato</string>
    <string name="cup_calendar">Calendario</string>
    <string name="cup_pilots">Piloti</string>
    <string name="cup_settings">Regolamento</string>
    <string name="fav_car">Macchina preferita</string>
    <string name="fav_circuit">Circuito preferito</string>
    <string name="hated_circuit">Circuito più odiato</string>
    <string name="reg_username">nome utente</string>
    <string name="full_name">Nome completo</string>
    <string name="address">Indirizzo</string>
    <string name="enter_date">Data di nascità</string>
    <string name="profile_pic">profile pic</string>
    <string name="scegli">Seleziona</string>
    <string name="email">email</string>
    <string name="ripeti_email">ripeti email</string>
    <string name="reg_password">password</string>
    <string name="ripeti_password">ripeti password</string>
    <string name="avanti">Avanti</string>
    <string name="ci_siamo_quasi">Ci siamo quasi!</string>
    <string name="numero_gara">Numero gara</string>
    <string name="finish">Finish!</string>
    <string name="macchina_preferita">Macchina preferita</string>
    <string name="aggiorna">Aggiorna</string>
    <string name="iscriviti_al_campionato">Iscriviti al campionato</string>
    <string name="piloti">Piloti</string>
    <string name="squadre">Squadre</string>
</resources>