<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="24dp"
        android:text="@string/login_welcome"
        android:textAlignment="center"
        android:textSize="21sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/image_app_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_logo"
        android:paddingTop="12dp"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputUsername"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="24dp"
        android:textAlignment="center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchRemember"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/ricordami"
        android:theme="@style/SwitchAppearance"
        app:switchPadding="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/login_enter" />

    <TextView
        android:id="@+id/textOr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/login_or"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRegister"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/login_register"
        style="@style/MyButtonTheme"/>
</LinearLayout>